@@ -32,6 +32,8 @@ DIST binutils-2.19.51.0.6-patches-1.0.tar.bz2 7234 RMD160 bad1b3ccd8f0fa77894d51
 DIST binutils-2.19.51.0.6.tar.bz2 15801649 RMD160 110700578968188979175163fa31f88358141063 SHA1 8efb5fd37419e208c44d25f461c2dcda289ae2b7 SHA256 0ed794528175298f609cf4392c5761e9bcbf3e5600b4bc967d5a6390e844b318
 DIST binutils-2.19.51.0.7-patches-1.0.tar.bz2 7242 RMD160 3339612c29c890dbf8c0e25f18d733a20daba7c0 SHA1 68f4f17788d4cae0e252916aad5cdf694103bc83 SHA256 2aa13713f11b7dc768f53c402c8260d97cb1e456ba0e2dff855d4c8a6c2b3dd1
 DIST binutils-2.19.51.0.7.tar.bz2 15797920 RMD160 73af9b141d0c8bfefb0fca34c0bd83eb30eb598e SHA1 1263f936badd68a70ebeab9b4a8fb4a9423db742 SHA256 683c89de15f7ffd93914d709483ba4c13b3a2099a1bece896d68e9330e37a841
+DIST binutils-2.19.51.0.8-patches-1.0.tar.bz2 7235 RMD160 4b615793b8e2f67955a349d2512c903684debeeb SHA1 c2259303c90118922a4ac11207eaa598f187a17d SHA256 18a5fe772e16733382fb63ed43e068d49483ebc8747e0573fea5fa14ad0d39d7
+DIST binutils-2.19.51.0.8.tar.bz2 15796254 RMD160 4a20565e9953211ad0332b9af3867169177d727c SHA1 6e4f29a98172c8bc5f10adcea286195fbabebc6c SHA256 987db3733a62520dfc367fe3bca64888ce7eb7052488ee10ba9a33bf01947ed1
 DIST binutils-2.19.tar.bz2 16219400 RMD160 1d5e234e22dbd9cd126ccfd685bf5700dc36ad1a SHA1 a150b97ec47996bf8f01d6bc14d41587faa4bbff SHA256 bd2ea10ffc2bf62a917b05f4fbe3d02212589c2bc177fa0c51a9c874d3da528a
 EBUILD binutils-2.16.1-r3.ebuild 649 RMD160 6faf1c397af3f4aaae2cdbf6463db3dfe85db7ef SHA1 90fce5a08b73f8c6b1bc333c996e37ec4df98e40 SHA256 91b8df52e274fc75a642fe98984b8379e51e540abdbd629b4c181837968d8633
 EBUILD binutils-2.17.50.0.17.ebuild 724 RMD160 31935504ee101cd0cc00aac5c7289a0f11af7e12 SHA1 838a2d74dd0d29c3fdc645abcc38ef3233dbe36e SHA256 3f18eb55472f77e4a77c3444479d339ba9a111c3456c2c748ef13262fc27b216
@@ -42,6 +44,7 @@ EBUILD binutils-2.19.50.0.1.ebuild 837 RMD160 274429b59b470ece980096cf369e8d7d07
 EBUILD binutils-2.19.51.0.5.ebuild 864 RMD160 9b0cb283a1657363696e7e323784b587a5492b21 SHA1 b2c6171817628fcce827106ac4623a71b35ffabb SHA256 2c5383b8b4720bcfb683fe6318c7a5b38b23e459c279e9af8a88256ff2a7e845
 EBUILD binutils-2.19.51.0.6.ebuild 638 RMD160 bf17ff0fe30209d3e07441696e21f3245234a089 SHA1 59bfb0257f91eb6efe88831cffdb2112573c8449 SHA256 a653333a2344d2dec0d789784ce0d1c979a06777e69b4ba2dd1607d73eaec641
 EBUILD binutils-2.19.51.0.7.ebuild 638 RMD160 13199b20aa47d0cc292a056846492b0e42d7d3a8 SHA1 8222154734a0fea1a3534e94bde6b4c97991da46 SHA256 8c08815213748dc84bc486ed39d4e3c12ba67b5a5d70ee081bf766ece43b24f4
+EBUILD binutils-2.19.51.0.8.ebuild 638 RMD160 53aaa4088b2fc038af81e25a6e23ad7c1f13dad7 SHA1 a07e43eb25942b2ae5610fd5653909ed0e78481f SHA256 65e9fa1fd37552a1550f7d89ab88d16324ff26e129420eb073dd6d4e63e293a4
 EBUILD binutils-2.19.ebuild 845 RMD160 f0b9cf67c3c7db333fa32681233b5a1c93098a3d SHA1 58dced1634469817b23cc07723778fea75091ab4 SHA256 55f1f8a8d852fc6ae3efb5c1783a694b6bd6eb116cc967621a396ef1ed9edc25
-MISC ChangeLog 62571 RMD160 5a3feb257fa7506fc0d294c2d0d9fcd4a82bd809 SHA1 440da71c5a66acce74301941693ab38b811622b4 SHA256 6479f0694ff46b154135c10293c7b52f531b47b195c2bde414e0ab275dc8e4e5
+MISC ChangeLog 62707 RMD160 9650898e0419fac6b0e683569b35478676282b9b SHA1 035f8fc2f3dab6caa6053f89f558f4e68fc628f7 SHA256 e003ed6e391fc6649f5f725a52e2e8ff5c2604c071671e1240cf7ddf2d6122da
 MISC metadata.xml 511 RMD160 84535ecd31e21020a41f3d173a294f03c5951da0 SHA1 1a40f6d427a9e3b64a15967b9b442d8cd65d40bb SHA256 ceac2610b009f7a25946ad186496cb7d761a495820ed6b67be9b560dda223c39
